# mask_card2

./: .flake8  README.md  conftest.py  main.py  pyproject.toml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_masks_py.html  z_145eef247bfb46b6_processing_py.html  z_145eef247bfb46b6_test_py.html  z_145eef247bfb46b6_widget_py.html  z_a44f0ac069e85531___init___py.html  z_a44f0ac069e85531_test_masks_py.html  z_a44f0ac069e85531_test_processing_py.html  z_a44f0ac069e85531_test_widget_py.html
src/: __init__.py  decorators.py  external_api.py  files.py  generators.py  main.py  mask.py  masks.py  mylog.txt  processing.py  search.py  utils.py  widget  widget.py
tests/: __init__.py  mylog1.txt  test_decorators.py  test_external_api.py  test_files.py  test_generators.py  test_main.py  test_masks.py  test_processing.py  test_search.py  test_utils.py  test_widget.py
